----------
v4.1.1-git
----------

[mjr] Add API methods for using history modification sequences.


------
v4.1.0
------

[jan] Fix searching in LDAP address books (Bug #12297).


---------
v4.1.0RC1
---------

[mms] Back button in smartmobile view for group member returns to group entry,
      not browse list.
[mms] Fix resetting smartmobile entry page when viewing more than 1 contact.


-----------
v4.1.0beta2
-----------

[mjr] Update the default SQL schema.
[jan] Fix incorrect dependencies.


-----------
v4.1.0beta1
-----------

[jan] Add CardDAV server support.
[mjr] Update the default SQL source schema (Request #11993).
[mms] Add links to group members on smartmobile entry page.
[mms] Add group icon to group contacts in smartmobile browse view.
[jan] Allow to search all search fields at once in basic searching.


------
v4.0.4
------

[mms] SECURITY: Fix XSS vulnerability on smartmobile contacts details page
      (João Machado <geral@jpaulo.eu>).
[jan] Fix importing certain phone fields from vCard (Bug #12178).
[mjr] Fix issues with importing contacts via ActiveSync when no default_dir
      pref is set (Thomas Jarosch <thomas.jarosch@intra2net.com>, Bug #12188)
[mjr] Fix ActiveSync global address book searches when using LDAP as backend
      (Bug #12089).


------
v4.0.3
------

[jan] Update French translation (Paul De Vlieger
      <paul.de_vlieger@moniut.univ-bpclermont.fr>).
[jan] Fix emptying shared address books.
[jan] Fix importing of LDIF data (Bug #11972).


------
v4.0.2
------

[mjr] Avoid sending broken datetime values to ActiveSync.
[jan] Update Basque translation (Ibon Igartua <ibon.igartua@ehu.es>).
[jan] Update French translation (Laurent Foucher
      <laurent.foucher@iut-tlse3.fr>).
[jan] Mark Kolab folder as default when changing default address book
      preference.


------
v4.0.1
------

[jan] Add free-text country attributes and use them in default Kolab backend
      (Request #11692).